--- a/1_32_enablement.ipynb
+++ b/1_32_enablement.ipynb
@@ -25,6 +25,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "881db85c",
+   "metadata": {},
+   "source": [
+    "### Prep"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ff428f51",
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d300ca31",
    "metadata": {},
    "outputs": [
@@ -116,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "07d20065",
    "metadata": {},
    "outputs": [],
@@ -143,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "39297f59",
    "metadata": {},
    "outputs": [
@@ -174,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e33482de",
    "metadata": {},
    "outputs": [
@@ -207,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9a749d0e",
    "metadata": {},
    "outputs": [],
@@ -268,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "924daddc",
    "metadata": {},
    "outputs": [
@@ -310,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "dfe601b5",
    "metadata": {},
    "outputs": [],
@@ -345,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "0585c163",
    "metadata": {},
    "outputs": [
@@ -384,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "c141dd7c",
    "metadata": {},
    "outputs": [
@@ -405,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "a8db6d02",
    "metadata": {},
    "outputs": [
@@ -432,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "b8f54db5",
    "metadata": {},
    "outputs": [
@@ -1009,11 +1017,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7124ba48",
+   "cell_type": "markdown",
+   "id": "b3905a54",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Others"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b6bec8d",
+   "metadata": {},
+   "source": [
+    "#### RBAC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a6d8dd5",
+   "metadata": {},
+   "source": [
+    "- Option to include RBAC roles & users to Weaviate backups"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "850cdab8",
+   "metadata": {},
+   "source": [
+    "#### New model integrations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf094307",
+   "metadata": {},
+   "source": [
+    "Support added for:\n",
+    "\n",
+    "- Gemini embedding models ([Google docs](https://cloud.google.com/vertex-ai/generative-ai/docs/model-reference/text-embeddings-api))\n",
+    "  - `gemini-embedding-001`\n",
+    "  - `text-embedding-005`\n",
+    "  - `text-multilingual-embedding-002`\n",
+    "\n",
+    "- Transformers models\n",
+    "  - `intfloat/multilingual-e5-large`\n",
+    "  - `Qwen/Qwen3-Embedding-0.6B` \n",
+    "  - `Qwen/Qwen3-Embedding-4B` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34da65e9",
+   "metadata": {},
    "source": []
   }
  ],
