--- a/1_32_enablement.ipynb
+++ b/1_32_enablement.ipynb
@@ -34,10 +34,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ff428f51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import weaviate\n",
     "import os\n",
@@ -54,10 +65,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0d6d3487",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client.collections.delete([\"MoviesConfigA\", \"MoviesConfigB\", \"Movies\"])\n",
     "client.alias.delete(alias_name=\"Movies\")"
@@ -80,7 +102,7 @@
     "<small>Note to self - remember to change the Python client branch\n",
     "\n",
     "\n",
-    "pip install -U git+https://github.com/weaviate/weaviate-python-client@alias\n",
+    "uv pip install -U git+https://github.com/weaviate/weaviate-python-client@alias\n",
     "</small>"
    ]
   },
@@ -94,10 +116,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d300ca31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<weaviate.collections.collection.sync.Collection at 0x104237b50>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from weaviate.classes.config import Configure, Property, DataType\n",
     "\n",
@@ -124,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "07d20065",
    "metadata": {},
    "outputs": [],
@@ -151,14 +184,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "39297f59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BatchObjectReturn(_all_responses=[UUID('d1422f2d-3ef1-4bc8-9e18-3099ed6a24cf'), UUID('ce711cab-ad11-4a90-a577-314f92081650'), UUID('c3d712c7-6337-4cde-91a8-b203d8c4205e'), UUID('2ac5ae03-16b0-49f8-a582-5b6e8825021e')], elapsed_seconds=0.25997209548950195, errors={}, uuids={0: UUID('d1422f2d-3ef1-4bc8-9e18-3099ed6a24cf'), 1: UUID('ce711cab-ad11-4a90-a577-314f92081650'), 2: UUID('c3d712c7-6337-4cde-91a8-b203d8c4205e'), 3: UUID('2ac5ae03-16b0-49f8-a582-5b6e8825021e')}, has_errors=False)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "movies_direct = client.collections.get(\"MoviesConfigA\")\n",
+    "movies_a = client.collections.get(\"MoviesConfigA\")\n",
     "\n",
-    "movies_direct.data.insert_many(objects=objects)"
+    "movies_a.data.insert_many(objects=objects)"
    ]
   },
   {
@@ -187,12 +231,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e33482de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dodgeball\n",
+      "Blades of Glory\n"
+     ]
+    }
+   ],
    "source": [
-    "r = movies_direct.query.hybrid(\n",
+    "r = movies_a.query.hybrid(\n",
     "    query=\"sports comedy\",\n",
     "    limit=2\n",
     ")\n",
@@ -219,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9a749d0e",
    "metadata": {},
    "outputs": [],
@@ -231,10 +284,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9f38cdd4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dodgeball\n",
+      "Blades of Glory\n"
+     ]
+    }
+   ],
    "source": [
     "movies = client.collections.get(\"Movies\")  # <-- Treat the alias as a collection\n",
     "\n",
@@ -283,10 +345,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "924daddc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<weaviate.collections.collection.sync.Collection at 0x117329c90>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from weaviate.classes.config import Configure, Property, DataType\n",
     "\n",
@@ -327,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "dfe601b5",
    "metadata": {},
    "outputs": [],
@@ -362,14 +435,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0585c163",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BatchObjectReturn(_all_responses=[UUID('a0b0adc9-5407-4618-be1b-c599f44626c5'), UUID('7ac44a76-4aa0-4c99-b06e-9a158bf69757'), UUID('f2602d38-768a-4a12-86b5-18ee28eaecd7'), UUID('6a2acd98-317d-4c4f-b4a2-38a3a7c9bec5')], elapsed_seconds=0.18184709548950195, errors={}, uuids={0: UUID('a0b0adc9-5407-4618-be1b-c599f44626c5'), 1: UUID('7ac44a76-4aa0-4c99-b06e-9a158bf69757'), 2: UUID('f2602d38-768a-4a12-86b5-18ee28eaecd7'), 3: UUID('6a2acd98-317d-4c4f-b4a2-38a3a7c9bec5')}, has_errors=False)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "movies = client.collections.get(\"MoviesConfigB\")\n",
+    "movies_b = client.collections.get(\"MoviesConfigB\")\n",
     "\n",
-    "movies.data.insert_many(objects=objects)"
+    "movies_b.data.insert_many(objects=objects)"
    ]
   },
   {
@@ -410,10 +494,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c141dd7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# BEGIN_SOLUTION\n",
     "client.alias.update(alias_name=\"Movies\", new_target_collection=\"MoviesConfigB\")\n",
@@ -446,12 +541,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "4f75ab22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.collection.delete(\"MoviesConfigA\")"
+    "client.collections.delete(\"MoviesConfigA\")"
    ]
   },
   {
@@ -464,12 +559,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "26eaeeca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dodgeball\n",
+      "Blades of Glory\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "r = movies.query.hybrid(\n",
     "    query=\"sports comedy\",\n",
     "    limit=2\n",
@@ -489,10 +592,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "5bbb6c2a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blades of Glory\n",
+      "Tropic Thunder\n"
+     ]
+    }
+   ],
    "source": [
     "# BEGIN_SOLUTION\n",
     "from weaviate.classes.query import Filter\n",
@@ -513,17 +625,30 @@
    "id": "326142d4",
    "metadata": {},
    "source": [
-    "If you have multiple solutions - list them here"
+    "If you have multiple aliases, you can list them :)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7ac619e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alias='Movies' collection='MoviesConfigB'\n",
+      "{'Movies': AliasReturn(alias='Movies', collection='MoviesConfigB')}\n"
+     ]
+    }
+   ],
    "source": [
-    "client.alias.list_all()"
+    "# Get details of one alias\n",
+    "print(client.alias.get(alias_name=\"Movies\"))\n",
+    "\n",
+    "# Get details of all aliases\n",
+    "print(client.alias.list_all())"
    ]
   },
   {
@@ -553,6 +678,19 @@
    "metadata": {},
    "source": [
     "### Shard replica movement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38f03dfd",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<small>Note to self - remember to change the Python client branch\n",
+    "\n",
+    "\n",
+    "uv pip install -U git+https://github.com/weaviate/weaviate-python-client@1.31/move-replication-under-cluster\n",
+    "</small>"
    ]
   },
   {
@@ -913,7 +1051,7 @@
     "<small>Note to self - remember to change the Python client branch\n",
     "\n",
     "\n",
-    "pip install -U git+https://github.com/weaviate/weaviate-python-client@vectors/deprecate-legacy-introduce-named-vectors-only-syntax\n",
+    "uv pip install -U git+https://github.com/weaviate/weaviate-python-client@vectors/deprecate-legacy-introduce-named-vectors-only-syntax\n",
     "</small>"
    ]
   },
@@ -1153,7 +1291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv_prerelease",
+   "display_name": "weaviate_enablement",
    "language": "python",
    "name": "python3"
   },
@@ -1167,7 +1305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
