--- a/1_32_enablement-complete.ipynb
+++ b/1_32_enablement-complete.ipynb
@@ -277,7 +277,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ADD YOUR CODE HERE"
+    "# BEGIN_SOLUTION\n",
+    "client.alias.create(alias_name=\"Movies\", target_collection=\"MoviesConfigA\")\n",
+    "# END_SOLUTION"
    ]
   },
   {
@@ -362,7 +364,30 @@
     "from weaviate.classes.config import Configure, Property, DataType\n",
     "\n",
     "# Create a new collection with your desired config\n",
-    "# ADD YOUR CODE HERE"
+    "# BEGIN_SOLUTION\n",
+    "client.collections.create(\n",
+    "    \"MoviesConfigB\",\n",
+    "    properties=[\n",
+    "        Property(name=\"title\", data_type=DataType.TEXT),\n",
+    "        Property(name=\"body\", data_type=DataType.TEXT),\n",
+    "        # ===== NEW PROPERTIES =====\n",
+    "        Property(name=\"rating\", data_type=DataType.NUMBER),\n",
+    "        Property(name=\"release_year\", data_type=DataType.INT),\n",
+    "        # ====================\n",
+    "    ],\n",
+    "    vectorizer_config=[\n",
+    "        Configure.NamedVectors.text2vec_cohere(\n",
+    "            name=\"default\",\n",
+    "            # ===== DIFFERENT INDEX CONFIG =====\n",
+    "            vector_index_config=Configure.VectorIndex.hnsw(\n",
+    "                quantizer=Configure.VectorIndex.Quantizer.sq()\n",
+    "            ),\n",
+    "            # ====================\n",
+    "        ),\n",
+    "    ],\n",
+    "    generative_config=Configure.Generative.anthropic()\n",
+    ")\n",
+    "# END_SOLUTION"
    ]
   },
   {
@@ -485,7 +510,9 @@
     }
    ],
    "source": [
-    "# ADD YOUR CODE HERE"
+    "# BEGIN_SOLUTION\n",
+    "client.alias.update(alias_name=\"Movies\", new_target_collection=\"MoviesConfigB\")\n",
+    "# END_SOLUTION"
    ]
   },
   {
@@ -579,7 +606,18 @@
     }
    ],
    "source": [
-    "# ADD YOUR CODE HERE"
+    "# BEGIN_SOLUTION\n",
+    "from weaviate.classes.query import Filter\n",
+    "\n",
+    "r = movies.query.hybrid(\n",
+    "    query=\"sports comedy\",\n",
+    "    limit=2,\n",
+    "    filters=Filter.by_property(\"release_year\").greater_than(2006)\n",
+    ")\n",
+    "\n",
+    "for o in r.objects:\n",
+    "    print(o.properties[\"title\"])\n",
+    "# END_SOLUTION"
    ]
   },
   {
@@ -882,7 +920,11 @@
     "    vectorizer_config=[\n",
     "        Configure.NamedVectors.text2vec_cohere(\n",
     "            vector_index_config=Configure.VectorIndex.hnsw(\n",
-    "                # ADD YOUR CODE HERE\n",
+    "                # BEGIN_SOLUTION\n",
+    "                # ===== Enable RQ like this =====\n",
+    "                quantizer=Configure.VectorIndex.Quantizer.rq()\n",
+    "                # ===== 🎉 That's it! =====\n",
+    "                # END_SOLUTION\n",
     "            )\n",
     "        )\n",
     "    ]\n",
@@ -1110,7 +1152,12 @@
     "        Property(name=\"body\", data_type=DataType.TEXT),\n",
     "    ],\n",
     "    # If defining one vector\n",
-    "    # ADD YOUR CODE HERE\n",
+    "    # BEGIN_SOLUTION\n",
+    "    vector_config=Configure.Vectors.text2vec_cohere(\n",
+    "        vector_index_config=Configure.VectorIndex.hnsw(),\n",
+    "        quantizer=Configure.VectorIndex.Quantizer.rq()\n",
+    "    )\n",
+    "    # END_SOLUTION\n",
     ")"
    ]
   },
@@ -1134,7 +1181,22 @@
     "        Property(name=\"body\", data_type=DataType.TEXT),\n",
     "    ],\n",
     "    # If defining multiple vectors\n",
-    "    # ADD YOUR CODE HERE\n",
+    "    # BEGIN_SOLUTION\n",
+    "    vector_config=[\n",
+    "        Configure.Vectors.text2vec_cohere(\n",
+    "            name=\"title\",\n",
+    "            source_properties=[\"title\"],\n",
+    "            vector_index_config=Configure.VectorIndex.hnsw(),\n",
+    "            quantizer=Configure.VectorIndex.Quantizer.rq()\n",
+    "        ),\n",
+    "        Configure.Vectors.text2vec_cohere(\n",
+    "            name=\"body\",\n",
+    "            source_properties=[\"body\"],\n",
+    "            vector_index_config=Configure.VectorIndex.hnsw(),\n",
+    "            quantizer=Configure.VectorIndex.Quantizer.rq()\n",
+    "        )\n",
+    "    ]\n",
+    "    # END_SOLUTION\n",
     ")"
    ]
   },
