--- a/1_33/1_33_enablement.ipynb
+++ b/1_33/1_33_enablement.ipynb
@@ -25,7 +25,12 @@
     "- [6. OIDC Group management](#oidc-groups)\n",
     "\n",
     "<div class=\"alert alert-info\">\n",
-    "<b>Warning:</b> The documentation and blog post links are pointing to draft versions as the materials haven't been officially published yet. \n",
+    "<b>Warning:</b>\n",
+    "<ul>\n",
+    "  <li>The documentation and blog post links are pointing to draft versions as the materials haven't been officially published yet.</li>\n",
+    "  <li>The Docker Compose files use Weaviate RC (Release Candidate versions) and not official builds.</li>\n",
+    "  <li>The Weaviate Python client library is also under development for v1.33.</li>\n",
+    "</ul>\n",
     "</div>"
    ]
   },
@@ -65,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ff428f51",
    "metadata": {},
    "outputs": [
@@ -130,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "b093a44d",
    "metadata": {},
    "outputs": [],
@@ -155,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "2dff538d",
    "metadata": {},
    "outputs": [
@@ -189,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d300ca31",
    "metadata": {},
    "outputs": [
@@ -222,7 +227,9 @@
     "            \n",
     "    print(f\"✅ Imported {len(data_objects)} objects with automatic batching\")\n",
     "\n",
-    "automatic_batching(\"BatchImportTest\", large_dataset*10)"
+    "automatic_batching(\"BatchImportTest\", large_dataset*10)\n",
+    "\n",
+    "# TODO: Check how concurrent_requests are handled"
    ]
   },
   {
@@ -251,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "053588dd",
    "metadata": {},
    "outputs": [
@@ -265,10 +272,10 @@
     {
      "data": {
       "text/plain": [
-       "<weaviate.collections.collection.sync.Collection at 0x1132f9030>"
+       "<weaviate.collections.collection.sync.Collection at 0x1066cffd0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fee2ca93",
    "metadata": {},
    "outputs": [
@@ -341,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "98d81db0",
    "metadata": {},
    "outputs": [
@@ -387,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d58aa848",
    "metadata": {},
    "outputs": [
@@ -464,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "2ce45d7b",
    "metadata": {},
    "outputs": [
@@ -497,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "07d20065",
    "metadata": {},
    "outputs": [
@@ -507,9 +514,10 @@
      "text": [
       "\n",
       "📋 Configured Aliases:\n",
+      "Alias: TmpAlias2\n",
+      "Alias: TmpAlias3\n",
       "Alias: ProductsAlias\n",
-      "Alias: TmpAlias\n",
-      "Alias: TmpAlias2\n"
+      "Alias: TmpAlias\n"
      ]
     }
    ],
@@ -534,7 +542,7 @@
     "        print(f\"Alias: {alias}\")\n",
     "\n",
     "\n",
-    "client.alias.create(alias_name=\"TmpAlias2\", target_collection=\"Products_v2\")\n",
+    "client.alias.create(alias_name=\"TmpAlias3\", target_collection=\"Products_v2\")\n",
     "list_all_aliases()"
    ]
   },
@@ -563,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "e33482de",
    "metadata": {},
    "outputs": [
@@ -572,7 +580,18 @@
      "output_type": "stream",
      "text": [
       "✅ Collection created with default RQ compression enabled!\n",
-      "Quantization config: {'default': _NamedVectorConfig(vectorizer=_NamedVectorizerConfig(vectorizer=<Vectorizers.TEXT2VEC_OPENAI: 'text2vec-openai'>, model={'baseURL': 'https://api.openai.com', 'isAzure': False, 'model': 'text-embedding-3-small', 'vectorizeClassName': True}, source_properties=None), vector_index_config=_VectorIndexConfigHNSW(multi_vector=None, quantizer=_RQConfig(bits=8, rescore_limit=20), cleanup_interval_seconds=300, distance_metric=<VectorDistances.COSINE: 'cosine'>, dynamic_ef_min=100, dynamic_ef_max=500, dynamic_ef_factor=8, ef=-1, ef_construction=128, filter_strategy=<VectorFilterStrategy.SWEEPING: 'sweeping'>, flat_search_cutoff=40000, max_connections=32, skip=False, vector_cache_max_objects=1000000000000))}\n"
+      "(\"Quantization config: {'default': \"\n",
+      " '_NamedVectorConfig(vectorizer=_NamedVectorizerConfig(vectorizer=<Vectorizers.TEXT2VEC_OPENAI: '\n",
+      " \"'text2vec-openai'>, model={'baseURL': 'https://api.openai.com', 'isAzure': \"\n",
+      " \"False, 'model': 'text-embedding-3-small', 'vectorizeClassName': True}, \"\n",
+      " 'source_properties=None), '\n",
+      " 'vector_index_config=_VectorIndexConfigHNSW(multi_vector=None, '\n",
+      " 'quantizer=_RQConfig(bits=8, rescore_limit=20), cleanup_interval_seconds=300, '\n",
+      " \"distance_metric=<VectorDistances.COSINE: 'cosine'>, dynamic_ef_min=100, \"\n",
+      " 'dynamic_ef_max=500, dynamic_ef_factor=8, ef=-1, ef_construction=128, '\n",
+      " \"filter_strategy=<VectorFilterStrategy.SWEEPING: 'sweeping'>, \"\n",
+      " 'flat_search_cutoff=40000, max_connections=32, skip=False, '\n",
+      " 'vector_cache_max_objects=1000000000000))}')\n"
      ]
     }
    ],
@@ -593,7 +612,7 @@
     "\n",
     "# Verify compression settings\n",
     "collection_config = client.collections.get(\"Articles_Compressed_Default\").config.get()\n",
-    "print(f\"Quantization config: {collection_config.vector_config}\")"
+    "pprint(f\"Quantization config: {collection_config.vector_config}\")"
    ]
   },
   {
@@ -606,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "9f38cdd4",
    "metadata": {},
    "outputs": [
@@ -683,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "924daddc",
    "metadata": {},
    "outputs": [
@@ -751,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "43984910",
    "metadata": {},
    "outputs": [],
@@ -792,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "482582b5",
    "metadata": {},
    "outputs": [
@@ -836,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "0897f973",
    "metadata": {},
    "outputs": [],
@@ -854,6 +873,10 @@
     "\n",
     "Manage permissions at scale using groups from your identity provider (Keycloak, Okta, Auth0, etc.).\n",
     "\n",
+    "### ⚠️ Important considerations\n",
+    "- **Set up Keycloak for OIDC** - Automatic Keycloak [setup script](https://github.com/weaviate/docs/blob/44a1f7671e8cd6d0aa9da5226b1e274050b5dbf7/_includes/code/python/keycloak_helper_script.py)\n",
+    "\n",
+    "\n",
     "### Key features\n",
     "- ✅ **Automatic permission inheritance** - Users get permissions from their groups\n",
     "- ✅ **Centralized management** - Define groups in your IdP\n",
@@ -866,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "462675a9",
    "metadata": {},
    "outputs": [
@@ -898,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "dfe601b5",
    "metadata": {},
    "outputs": [
@@ -915,7 +938,7 @@
       "                      cluster_permissions=[],\n",
       "                      collections_permissions=[],\n",
       "                      data_permissions=[],\n",
-      "                      roles_permissions=[RolesPermissionOutput(actions={<RolesAction.READ: 'read_roles'>, <RolesAction.UPDATE: 'update_roles'>, <RolesAction.DELETE: 'delete_roles'>, <RolesAction.CREATE: 'create_roles'>}, role='testRole*', scope='match')],\n",
+      "                      roles_permissions=[RolesPermissionOutput(actions={<RolesAction.UPDATE: 'update_roles'>, <RolesAction.READ: 'read_roles'>, <RolesAction.CREATE: 'create_roles'>, <RolesAction.DELETE: 'delete_roles'>}, role='testRole*', scope='match')],\n",
       "                      users_permissions=[],\n",
       "                      backups_permissions=[],\n",
       "                      nodes_permissions=[],\n",
@@ -927,22 +950,7 @@
       "                   cluster_permissions=[],\n",
       "                   collections_permissions=[],\n",
       "                   data_permissions=[],\n",
-      "                   roles_permissions=[RolesPermissionOutput(actions={<RolesAction.READ: 'read_roles'>, <RolesAction.UPDATE: 'update_roles'>, <RolesAction.DELETE: 'delete_roles'>, <RolesAction.CREATE: 'create_roles'>}, role='testRole*', scope='match')],\n",
-      "                   users_permissions=[],\n",
-      "                   backups_permissions=[],\n",
-      "                   nodes_permissions=[],\n",
-      "                   tenants_permissions=[],\n",
-      "                   replicate_permissions=[],\n",
-      "                   groups_permissions=[])}\n",
-      "✅ Revoked roles ['data_manager'] from /engineering\n",
-      "\n",
-      "📋 Roles for group '/engineering':\n",
-      "{'developer': Role(name='developer',\n",
-      "                   alias_permissions=[],\n",
-      "                   cluster_permissions=[],\n",
-      "                   collections_permissions=[],\n",
-      "                   data_permissions=[],\n",
-      "                   roles_permissions=[RolesPermissionOutput(actions={<RolesAction.READ: 'read_roles'>, <RolesAction.UPDATE: 'update_roles'>, <RolesAction.DELETE: 'delete_roles'>, <RolesAction.CREATE: 'create_roles'>}, role='testRole*', scope='match')],\n",
+      "                   roles_permissions=[RolesPermissionOutput(actions={<RolesAction.UPDATE: 'update_roles'>, <RolesAction.READ: 'read_roles'>, <RolesAction.CREATE: 'create_roles'>, <RolesAction.DELETE: 'delete_roles'>}, role='testRole*', scope='match')],\n",
       "                   users_permissions=[],\n",
       "                   backups_permissions=[],\n",
       "                   nodes_permissions=[],\n",
@@ -1001,6 +1009,39 @@
     "    print(f\"\\n📋 Roles for group '{group_id}':\")\n",
     "    pprint(group_roles)\n",
     "\n",
+    "setup_oidc_group_permissions()\n",
+    "list_group_permissions(\"/engineering\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "afffbe36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Revoked roles ['data_manager'] from /engineering\n",
+      "\n",
+      "📋 Roles for group '/engineering':\n",
+      "{'developer': Role(name='developer',\n",
+      "                   alias_permissions=[],\n",
+      "                   cluster_permissions=[],\n",
+      "                   collections_permissions=[],\n",
+      "                   data_permissions=[],\n",
+      "                   roles_permissions=[RolesPermissionOutput(actions={<RolesAction.UPDATE: 'update_roles'>, <RolesAction.READ: 'read_roles'>, <RolesAction.CREATE: 'create_roles'>, <RolesAction.DELETE: 'delete_roles'>}, role='testRole*', scope='match')],\n",
+      "                   users_permissions=[],\n",
+      "                   backups_permissions=[],\n",
+      "                   nodes_permissions=[],\n",
+      "                   tenants_permissions=[],\n",
+      "                   replicate_permissions=[],\n",
+      "                   groups_permissions=[])}\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# Revoke specific roles\n",
     "def update_group_permissions(group_id, roles_to_revoke):\n",
@@ -1008,16 +1049,13 @@
     "    oidc_client.groups.oidc.revoke_roles(group_id=group_id, role_names=roles_to_revoke)\n",
     "    print(f\"✅ Revoked roles {roles_to_revoke} from {group_id}\")\n",
     "\n",
-    "\n",
-    "setup_oidc_group_permissions()\n",
-    "list_group_permissions(\"/engineering\")\n",
     "update_group_permissions(\"/engineering\", [\"data_manager\"])\n",
     "list_group_permissions(\"/engineering\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "8d5f09f7",
    "metadata": {},
    "outputs": [],
